@@ -1,56 +1,11 @@
 <IfDefine PERL>
   <IfModule !mod_perl.c>
-    LoadModule perl_module    modules/mod_perl.so
+    LoadModule perl_module    extramodules/mod_perl.so
   </IfModule>
 </IfDefine>
 
 <IfModule mod_perl.c>
-	#PerlTrace all
-	PerlRequire "/etc/apache2/modules.d/apache2-mod_perl-startup.pl"
-
-	#Provide two aliases to the same cgi-bin directory,
-	#to see the effects of the 2 different mod_perl modes
-	#for Apache2::Registry Mode
-	Alias /perl/ /var/www/localhost/perl/
-	#for Apache2::Perlrun Mode
-	Alias /cgi-perl/ /var/www/localhost/perl/
-
-	<IfModule mod_access.c>
-	<Location /perl-status>
-        	SetHandler perl-script
-		PerlResponseHandler Apache2::Status
-        	Order deny,allow
-        	Deny from all
-        	Allow from 127.0.0.1
-	</Location>
-	</IfModule>
-
-    <Directory /home/*/public_html/perl>
-        SetHandler perl-script
-        PerlResponseHandler ModPerl::PerlRun
-        Options -Indexes ExecCGI
-		PerlOptions +ParseHeaders
-    </Directory>
-
-    PerlModule ModPerl::Registry
-    #set Apache::Registry Mode for /perl Alias
-    # To set subdirectories to use perl set the following 
-    # and comment the orignial:
-    # <Location ~ "^/perl/.*\.pl$">
-    <Location  "^/perl/*.pl>
-        SetHandler perl-script
-        PerlResponseHandler ModPerl::Registry
-        Options -Indexes ExecCGI
-        PerlSendHeader On
-    </Location>
-
-    #set Apache::PerlRun Mode for /cgi-perl Alias
-    <Location /cgi-perl/*.pl>
-        SetHandler perl-script
-        PerlResponseHandler ModPerl::PerlRun
-        Options -Indexes ExecCGI
-        PerlSendHeader On
-    </Location>
-
+  #PerlTrace all
+  PerlRequire "/etc/apache2/conf/modules.d/apache2-mod_perl-startup.pl"
 </ifModule>
 
