@@ -1,24 +1,41 @@
+use Apache2 ();
+
 use lib qw(/home/httpd/perl);
 
 # enable if the mod_perl 1.0 compatibility is needed
-#use Apache2::compat ();
+use Apache::compat ();
+# preload all mp2 modules
+use ModPerl::MethodLookup;
+ModPerl::MethodLookup::preload_all_modules();
 
 use ModPerl::Util (); #for CORE::GLOBAL::exit
 
-use Apache2::RequestRec ();
-use Apache2::RequestIO ();
-use Apache2::RequestUtil ();
+use Apache::RequestRec ();
+use Apache::RequestIO ();
+use Apache::RequestUtil ();
 
-use Apache2::ServerRec ();
-use Apache2::ServerUtil ();
-use Apache2::Connection ();
-use Apache2::Log ();
+use Apache::ServerRec ();
+use Apache::ServerUtil ();
+use Apache::Connection ();
+use Apache::Log ();
 
 use APR::Table ();
 
 use ModPerl::Registry ();
 
-use Apache2::Const -compile => ':common';
+use Apache::Const -compile => ':common';
 use APR::Const -compile => ':common';
+
+# end of mod_perl2 stuff
+
+#use Apache::Session ();
+use CGI ();
+use CGI::Cookie ();
+use DBI;
+#use Apache::Perldoc ();
+use Apache::Status ();
+use HTML::Mason ();
+use HTML::Mason::ApacheHandler ();
+use MasonX::Apache2Handler ();
 
 1;
