@@ -1,6 +1,15 @@
 # ChangeLog for www-apache/mod_perl
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_perl/ChangeLog,v 1.7 2005/07/29 11:18:36 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_perl/ChangeLog,v 1.8 2005/08/08 09:35:43 mcummings Exp $
+
+*mod_perl-2.0.1-r2 (08 Aug 2005)
+
+  08 Aug 2005; Michael Cummings <mcummings@gentoo.org> files/75_mod_perl.conf,
+  files/apache2-mod_perl-startup.pl, +files/2.0.1/75_mod_perl.conf,
+  +files/2.0.1/apache2-mod_perl-startup.pl, mod_perl-2.0.1-r1.ebuild,
+  +mod_perl-2.0.1-r2.ebuild:
+  With help from rendhalver, split out the mod-perl2 conf/files so that both
+  older and newer versions were available
 
 *mod_perl-2.0.1-r1 (29 Jul 2005)
 
